--- a/k8s-deploy.yml
+++ b/k8s-deploy.yml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: diabetes-api
-        image: your-dockerhub-username/diabetes-api:latest
+        image: iyiolaidris/diabetes-mlop-demo:v1
         ports:
         - containerPort: 8000
         imagePullPolicy: Always
